--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,4 +1,4 @@
-/* Modern CSS Reset */
+/* modern css reset */
 *,
 *::before,
 *::after {
@@ -41,23 +41,23 @@ h6 {
   overflow-wrap: break-word;
 }
 
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+/* remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
   list-style: none;
 }
 
-/* Set core root defaults */
+/* set core root defaults */
 html:focus-within {
   scroll-behavior: smooth;
 }
 
-/* A elements that don't have a class get default styles */
+/* a elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
 }
 
-/* Make sure the text color is inherited by input/button/etc */
+/* to ensure the text color is inherited by input/button/etc */
 input,
 button,
 textarea,
